results/SVCOMP/specgen/log-exceptions12-2024_02_25_17_02_19.txt
class A extends RuntimeException {}

class B extends A {}

class C extends B {}

class F {
  //@ ensures (\forall Exception exc; exc instanceof B; \result == false);
  void foo() {
    try {
      B b = new B();
      throw b;
    } catch (B exc) {
      assert false;
    }
  }
}

public class exceptions12 {
  //@ ensures (\forall Exception exc; exc instanceof B; \result == false);
  public static void main(String[] args) {
    try {
      F f = new F();
      f.foo();
    } catch (B exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions12.java:8: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\forall Exception exc; exc instanceof B; \result == false);
                                                         ^
/home/max/Documents/JMLGPT/tmp/exceptions12.java:20: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\forall Exception exc; exc instanceof B; \result == false);
                                                         ^
2 errors

class A extends RuntimeException {}

class B extends A {}

class C extends B {}

class F {
  //@ ensures (\forall Exception exc; exc instanceof B; true);
  void foo() {
    try {
      B b = new B();
      throw b;
    } catch (B exc) {
      assert false;
    }
  }
}

public class exceptions12 {
  //@ ensures (\forall Exception exc; exc instanceof B; true);
  public static void void main(String[] args) {
    try {
      F f = new F();
      f.foo();
    } catch (B exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions12.java:21: error: <identifier> expected
  public static void void main(String[] args) {
                    ^
/home/max/Documents/JMLGPT/tmp/exceptions12.java:21: error: '(' expected
  public static void void main(String[] args) {
                     ^
2 errors

class A extends RuntimeException {}

class B extends A {}

class C extends B {}

class F {
  //@ ensures (\forall Exception exc; exc instanceof B; true);
  void foo() {
    try {
      B b = new B();
      throw b;
    } catch (B exc) {
      assert false;
    }
  }
}

public class exceptions12 {
  //@ ensures (\forall Exception exc; exc instanceof B; true);
  public static void main(String[] args) {
    try {
      F f = new F();
      f.foo();
    } catch (B exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions12.java:14: verify: The prover cannot establish an assertion (Assert) in method foo
      assert false;
      ^
/home/max/Documents/JMLGPT/tmp/exceptions12.java:26: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
2 verification failures

class A extends RuntimeException {}

class B extends A {}

class C extends B {}

class F {
  //@ ensures (\forall Exception exc; exc instanceof B; true);
  void foo() {
    try {
      B b = new B();
      throw b;
    } catch (B exc) {
      assert exc instanceof B;
    }
  }
}

public class exceptions12 {
  //@ ensures (\forall Exception exc; exc instanceof B; true);
  public static void main(String[] args) {
    try {
      F f = new F();
      f.foo();
    } catch (B exc) {
      assert exc instanceof B;
    }
  }
}

